--- a/src/Items/Items.css
+++ b/src/Items/Items.css
@@ -109,6 +109,30 @@
   width: 120px;
   transition: 350ms;
 }
+.custom-counter {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+  border: 1px solid #d3d3d3;
+  height: 40px;
+  overflow: hidden;
+  border-radius: 10px;
+}
+.custom-add {
+  font-size: 20px;
+  border: none;
+  width: 40px;
+  height: 39px;
+  transition: 250ms;
+}
+.custom-add:hover {
+  background-color: #5caf90;
+  color: white;
+}
+.custom-value {
+  font-family: poppinsMedium;
+}
 .single-increment {
   border: none !important;
   width: 40px;
